for now we only need tabs permission

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,9 @@
     "background": {
         "service_worker": "src/js/service_worker.js"
     },
-    "permissions": ["activeTab", "declarativeContent", "tabs", "storage"], 
+    "permissions": [
+        "tabs"
+    ], 
     "action": {
         "default_popup": "src/html/popup.html",
         "default_icon": "images/icons/bee.png"
