--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
         "service_worker": "src/js/service_worker.js"
     },
     "permissions": [
-        "tabs"
+        "tabs", "storage"
     ], 
     "action": {
         "default_popup": "src/html/popup.html",
